# asset

./: results_one.txt
include-idl/: Cargo.toml  results_two.txt  results_two_after.txt
include-idl/benches/: optimizer_benchmarks.rs
include-idl/src/: lib.rs
include-idl/src/just_optimize/: implementation.rs  mod.rs  tests.rs
include-idl/src/rayon_optimize/: implementation.rs  tests.rs
