[package]
name = "solana-include-idl"
description = "A collection of macro and helpers to manage IDL stored on the program binary"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
shrink = ["dep:flate2"]
parse = ["dep:flate2", "dep:goblin", "dep:serde_json", "dep:md5", "dep:base64"]
parse-rayon = ["dep:flate2", "dep:goblin", "dep:serde_json", "dep:md5", "dep:base64", "dep:rayon"]
just-optimize = ["parse"]
rayon-optimize = ["parse-rayon"]

[dependencies]
flate2 = { version = "1.0", optional = true }
goblin = { version = "0.8.2", optional = true }
serde_json = { version = "^1.0", optional = true }
md5 = { version = "0.7.0", optional = true }
base64 = { version = "0.22.1", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimizer_benchmarks"
harness = false
required-features = ["just-optimize"]

